--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "description": "",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.60.0",
+    "@neynar/nodejs-sdk": "^3.34.0",
     "@supabase/supabase-js": "^2.56.0",
     "@types/node": "^24.3.0",
     "@types/node-cron": "^3.0.11",
@@ -25,6 +26,7 @@
     "dotenv": "^17.2.1",
     "node-cron": "^4.2.1",
     "tsx": "^4.20.4",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "viem": "^2.34.0"
   }
 }
